2009-11-18  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Simon Hausmann.

        Fix a code copy and paste error. m_page should be page.

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::DumpRenderTree::createWindow):

2009-11-17  Mark Rowe  <mrowe@apple.com>

        Reviewed by Alexey Proskuryakov.

        <http://webkit.org/b/31603> WebSocket server is confused if WebKit tests run from within /tmp on Mac OS X

        * pywebsocket/mod_pywebsocket/dispatch.py: Use os.path.realpath as it returns the canonical path of a file.
        This prevents symlinks from confusing the descendant check.

2009-11-17  Mark Rowe  <mrowe@apple.com>

        Reviewed by Alexey Proskuryakov.

        <http://webkit.org/b/31602> Failing to start the WebSocket server shouldn’t terminate entire test run

        If the WebSocket server fails to start have DRT load an error page in place of tests that require the
        server to be up rather than having run-webkit-tests abort immediately.

        * Scripts/run-webkit-tests:

2009-11-17  Eric Seidel  <eric@webkit.org>

        Reviewed by Darin Adler.

        commit-queue is failing to set reviewer in ChangeLogs
        https://bugs.webkit.org/show_bug.cgi?id=31592

        * Scripts/bugzilla-tool: Clarify the "applying" log message.
        * Scripts/modules/bugzilla.py:
         - Add a new _validate_committer_and_reviewer function as a
           temporary solution until we can make a real Attachment object
           which knows how to fill in its committer/reviewer fields automatically.

2009-11-17  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Unreviewed buildbot fix.

        Revert part of earlier patch and add comment, as it
        was causing timeouts on the buildbot.

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::notifyDone):

2009-11-17  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Oliver Hunt.
